3 files modified, 6 added

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,5 +1,6 @@
 <h2>Products</h2>
 
+<app-product-alerts [name]="test" (onNotify)="notify()"></app-product-alerts>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
